<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#8A32C8"
        android:layout_height="match_parent"
        tools:context=".activities.ForgetActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:layout_marginStart="25sp"
            android:layout_marginEnd="25sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/thought"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@id/email_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:background="@drawable/edit_back"
            android:textColorHint="@color/black"
            android:drawableStart="@drawable/baseline_account_circle_24"
            android:drawablePadding="13dp"
            android:elevation="3dp"
            android:hint="@string/your_registered_email"
            android:padding="13dp"
            android:textColor="#888887"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintWidth_percent=".8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:background="@drawable/spinner_back"
            android:text="@string/reset"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>