<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8A32C8"
        tools:context=".activities.SignupActivity">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8sp"
                android:src="@drawable/mail_logo" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/tv_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <LinearLayout
                    android:id="@+id/mainLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_signUp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/username"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:drawableStart="@drawable/baseline_person_24"
                            android:background="@drawable/edit_back"
                            android:fontFamily="sans-serif-light"
                            android:inputType="textPersonName"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/email_address"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/etEmail"
                            android:drawableStart="@drawable/baseline_account_circle_24"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/edit_back"
                            android:fontFamily="sans-serif-light"
                            android:inputType="textEmailAddress"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/password"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/etPassword1"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/edit_back"
                            android:drawableStart="@drawable/baseline_key_24"
                            android:fontFamily="sans-serif-light"
                            android:inputType="textPassword"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/confirm_password"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:drawableStart="@drawable/baseline_key_24"
                            android:layout_height="50dp"
                            android:background="@drawable/edit_back"
                            android:fontFamily="sans-serif-light"
                            android:inputType="textPassword"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/mobile_number"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/etNumber"
                            android:drawableStart="@drawable/baseline_call_24"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/edit_back"
                            android:fontFamily="sans-serif-light"
                            android:inputType="phone"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/mainLinearLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/spinner_back"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sign_up_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>